change translation model

--- a/translation.ipynb
+++ b/translation.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import MBartForConditionalGeneration, MBart50TokenizerFast\n",
+    "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM\n",
     "import pandas as pd"
    ]
   },
@@ -16,8 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = MBartForConditionalGeneration.from_pretrained(\"facebook/mbart-large-50-many-to-many-mmt\")\n",
-    "tokenizer = MBart50TokenizerFast.from_pretrained(\"facebook/mbart-large-50-many-to-many-mmt\")"
+    "tokenizer = AutoTokenizer.from_pretrained(\"facebook/nllb-200-distilled-600M\")\n",
+    "model = AutoModelForSeq2SeqLM.from_pretrained(\"facebook/nllb-200-distilled-600M\")"
    ]
   },
   {
@@ -39,11 +39,11 @@
    "outputs": [],
    "source": [
     "def translate(article):\n",
-    "    tokenizer.src_lang = \"en_XX\"\n",
+    "    tokenizer.src_lang = \"eng_Latn\"\n",
     "    encoded_hi = tokenizer(article, return_tensors=\"pt\")\n",
     "    generated_tokens = model.generate(\n",
     "        **encoded_hi,\n",
-    "        forced_bos_token_id=tokenizer.lang_code_to_id[\"ko_KO\"]\n",
+    "        forced_bos_token_id=tokenizer.lang_code_to_id[\"kor_Hang\"]\n",
     "    )\n",
     "    text = tokenizer.batch_decode(generated_tokens, skip_special_tokens=True)\n",
     "    return text"
