--- a/DailyReport.ipynb
+++ b/DailyReport.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 211,
    "id": "dfad4f82",
    "metadata": {},
    "outputs": [],
@@ -135,10 +135,11 @@
     "    else:\n",
     "        raise ValueError\n",
     "\n",
-    "    history = data.history(start = date - intv, end = date, interval=\"1h\")\n",
     "    if interval == '1d':\n",
+    "        history = data.history(start = date - intv, end = date, interval=\"1h\")\n",
     "        history.index = list(map(lambda x:str(x).split()[1][:5], list(history.index)))\n",
     "    else:\n",
+    "        history = data.history(start = date - intv, end = date, interval=\"1h\")\n",
     "        history.index = list(map(lambda x:str(x).split()[0], list(history.index)))\n",
     "    \n",
     "    plt.figure(figsize=(10,8))\n",
@@ -231,7 +232,270 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0756be86",
+   "id": "112dcb02",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "id": "9468fcb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfa = pd.read_csv(PATH + 'news_summary_keyword.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "id": "a11a6efa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = dfa.keywords[10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "id": "c46bdeea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfa['test']=None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "id": "f97f5cd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The Indonesia stock market has risen by more than 35 points in consecutive trading days, reaching a plateau of 6,930 points. The global forecast for Asian markets is cautiously optimistic, with mixed performances from European and U.S. markets. The JCI finished modestly higher on Monday, with gains from cement companies and mixed performances from financial and resource shares. Crude oil prices also climbed higher on Monday, with WTI crude futures gaining 16 percent in July. Indonesia will release June numbers for consumer prices later today, with forecasts suggesting an annual increase of 3.11 percent for overall inflation and 2.50 percent for core CPI.'"
+      ]
+     },
+     "execution_count": 236,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfa.loc[0]['summary']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "id": "efcb3350",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Yireh\\AppData\\Local\\Temp\\ipykernel_6296\\1203701234.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dfa['test'].loc[i] = dfa.loc[i]['summary'].__len__()\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    dfa['test'].loc[i] = dfa.loc[i]['summary'].__len__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "id": "ff4d1bbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rgs_dt</th>\n",
+       "      <th>tck_iem_cd</th>\n",
+       "      <th>til_ifo</th>\n",
+       "      <th>ctgy_cfc_ifo</th>\n",
+       "      <th>mdi_ifo</th>\n",
+       "      <th>news_smy_ifo</th>\n",
+       "      <th>rld_ose_iem_tck_cd</th>\n",
+       "      <th>url_ifo</th>\n",
+       "      <th>article</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>test</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20230801</td>\n",
+       "      <td>Latest</td>\n",
+       "      <td>Steady Start Seen For Indonesia Stock Market</td>\n",
+       "      <td>Markets</td>\n",
+       "      <td>RTTNews</td>\n",
+       "      <td>(RTTNews) - The Indonesia stock market has mov...</td>\n",
+       "      <td>_</td>\n",
+       "      <td>https://www.nasdaq.com/articles/steady-start-s...</td>\n",
+       "      <td>July 31, 2023 — 09:34 pm EDT      Written by  ...</td>\n",
+       "      <td>The Indonesia stock market has risen by more t...</td>\n",
+       "      <td>1. Indonesia stock market\\r\\n2. rise\\r\\n3. con...</td>\n",
+       "      <td>662</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20230801</td>\n",
+       "      <td>ARES</td>\n",
+       "      <td>Ares Management (ARES) Q2 Earnings: Taking a L...</td>\n",
+       "      <td>Technology</td>\n",
+       "      <td>Zacks</td>\n",
+       "      <td>For the quarter ended June 2023, Ares Manageme...</td>\n",
+       "      <td>ARES</td>\n",
+       "      <td>https://www.nasdaq.com/articles/ares-managemen...</td>\n",
+       "      <td>August 01, 2023 — 09:30 am EDT      Written by...</td>\n",
+       "      <td>Ares Management reported revenue of $792.1 mil...</td>\n",
+       "      <td>1. Ares Management\\r\\n2. revenue\\r\\n3. quarter...</td>\n",
+       "      <td>568</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20230801</td>\n",
+       "      <td>EW</td>\n",
+       "      <td>RBC Capital Reiterates Edwards Lifesciences (E...</td>\n",
+       "      <td>Stocks</td>\n",
+       "      <td>Fintel</td>\n",
+       "      <td>Fintel reports that on August 1, 2023, RBC Cap...</td>\n",
+       "      <td>EW</td>\n",
+       "      <td>https://www.nasdaq.com/articles/rbc-capital-re...</td>\n",
+       "      <td>August 01, 2023 — 07:30 pm EDT      Written by...</td>\n",
+       "      <td>RBC Capital reiterated its Outperform recommen...</td>\n",
+       "      <td>1. RBC Capital\\r\\n2. Edwards Lifesciences\\r\\n3...</td>\n",
+       "      <td>612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20230801</td>\n",
+       "      <td>LMAT</td>\n",
+       "      <td>Noteworthy Tuesday Option Activity: LMAT, MSTR...</td>\n",
+       "      <td>Markets,Stocks,Options</td>\n",
+       "      <td>BNK Invest</td>\n",
+       "      <td>Looking at options trading activity among comp...</td>\n",
+       "      <td>LMAT,LMAT,MSTR,TPC</td>\n",
+       "      <td>https://www.nasdaq.com/articles/noteworthy-tue...</td>\n",
+       "      <td>August 01, 2023 — 03:19 pm EDT      Written by...</td>\n",
+       "      <td>BNK Invest analyzed options trading activity a...</td>\n",
+       "      <td>1. BNK Invest\\r\\n2. Russell 3000 index\\r\\n3. L...</td>\n",
+       "      <td>666</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20230801</td>\n",
+       "      <td>EW</td>\n",
+       "      <td>Notable Two Hundred Day Moving Average Cross - EW</td>\n",
+       "      <td>Markets,Stocks</td>\n",
+       "      <td>BNK Invest</td>\n",
+       "      <td>In trading on Tuesday, shares of Edwards Lifes...</td>\n",
+       "      <td>EW</td>\n",
+       "      <td>https://www.nasdaq.com/articles/notable-two-hu...</td>\n",
+       "      <td>August 01, 2023 — 11:07 am EDT      Written by...</td>\n",
+       "      <td>On August 1, 2023, at 11:07 am EDT, shares of ...</td>\n",
+       "      <td>1. Edwards Lifesciences Corp\\r\\n2. Symbol: EW\\...</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     rgs_dt tck_iem_cd                                            til_ifo  \\\n",
+       "0  20230801     Latest       Steady Start Seen For Indonesia Stock Market   \n",
+       "1  20230801       ARES  Ares Management (ARES) Q2 Earnings: Taking a L...   \n",
+       "2  20230801         EW  RBC Capital Reiterates Edwards Lifesciences (E...   \n",
+       "3  20230801       LMAT  Noteworthy Tuesday Option Activity: LMAT, MSTR...   \n",
+       "4  20230801         EW  Notable Two Hundred Day Moving Average Cross - EW   \n",
+       "\n",
+       "             ctgy_cfc_ifo     mdi_ifo  \\\n",
+       "0                 Markets     RTTNews   \n",
+       "1              Technology       Zacks   \n",
+       "2                  Stocks      Fintel   \n",
+       "3  Markets,Stocks,Options  BNK Invest   \n",
+       "4          Markets,Stocks  BNK Invest   \n",
+       "\n",
+       "                                        news_smy_ifo  rld_ose_iem_tck_cd  \\\n",
+       "0  (RTTNews) - The Indonesia stock market has mov...                   _   \n",
+       "1  For the quarter ended June 2023, Ares Manageme...                ARES   \n",
+       "2  Fintel reports that on August 1, 2023, RBC Cap...                  EW   \n",
+       "3  Looking at options trading activity among comp...  LMAT,LMAT,MSTR,TPC   \n",
+       "4  In trading on Tuesday, shares of Edwards Lifes...                  EW   \n",
+       "\n",
+       "                                             url_ifo  \\\n",
+       "0  https://www.nasdaq.com/articles/steady-start-s...   \n",
+       "1  https://www.nasdaq.com/articles/ares-managemen...   \n",
+       "2  https://www.nasdaq.com/articles/rbc-capital-re...   \n",
+       "3  https://www.nasdaq.com/articles/noteworthy-tue...   \n",
+       "4  https://www.nasdaq.com/articles/notable-two-hu...   \n",
+       "\n",
+       "                                             article  \\\n",
+       "0  July 31, 2023 — 09:34 pm EDT      Written by  ...   \n",
+       "1  August 01, 2023 — 09:30 am EDT      Written by...   \n",
+       "2  August 01, 2023 — 07:30 pm EDT      Written by...   \n",
+       "3  August 01, 2023 — 03:19 pm EDT      Written by...   \n",
+       "4  August 01, 2023 — 11:07 am EDT      Written by...   \n",
+       "\n",
+       "                                             summary  \\\n",
+       "0  The Indonesia stock market has risen by more t...   \n",
+       "1  Ares Management reported revenue of $792.1 mil...   \n",
+       "2  RBC Capital reiterated its Outperform recommen...   \n",
+       "3  BNK Invest analyzed options trading activity a...   \n",
+       "4  On August 1, 2023, at 11:07 am EDT, shares of ...   \n",
+       "\n",
+       "                                            keywords test  \n",
+       "0  1. Indonesia stock market\\r\\n2. rise\\r\\n3. con...  662  \n",
+       "1  1. Ares Management\\r\\n2. revenue\\r\\n3. quarter...  568  \n",
+       "2  1. RBC Capital\\r\\n2. Edwards Lifesciences\\r\\n3...  612  \n",
+       "3  1. BNK Invest\\r\\n2. Russell 3000 index\\r\\n3. L...  666  \n",
+       "4  1. Edwards Lifesciences Corp\\r\\n2. Symbol: EW\\...  500  "
+      ]
+     },
+     "execution_count": 235,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfa.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81782ba5",
    "metadata": {},
    "outputs": [],
    "source": []
